--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding : 0px ;
     color : #000000;
     font-family: sans-serif;
-    background-color: #000000;
+    background-color: white;
     text-decoration: none;
 }
 
@@ -56,8 +56,8 @@ section {
 }
 
 article {
-    margin: 30px;
-    padding: 30px;
+    margin: 0px;
+    padding: 50px;
     background-color:#000000;
     font-weight:bolder;
     text-align:center;
@@ -100,16 +100,13 @@ header {
 footer {
     background-color:#ffffff;
     text-align:center;
-    padding: 50px 0px;
+    padding: 20px;
     font-size:1.5em;
-    font-weight:bolder;
-    color:white;
-    background-image: url(https://i.postimg.cc/vDRTLqtS/DSC-0135-klein.jp);
 );
 
 }
 summary {
-    padding: 100px 0px;
+    padding: 50px;
     font-size:0.5em;
     font-weight:bolder;
     color:white;
@@ -130,11 +127,11 @@ summary {
 .menu {
     width: 50%;
     float: left;
-    padding: 150px;
+    padding: 50px;
     border: 1px solid white;
     color:black;
     text-align: left;
-    font-size:0.3em;
+    font-size:0.5em;
 
 }
 
