--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 nav {
     padding: 0px 0px;
     text-align: left;
+    vertical-align: bottom;
 }
 
 main {
@@ -27,7 +28,7 @@ main div {
 }
  main div:hover {
     background-color:#F5EFE6;
-    color:#5b95ff;
+    color: dimgrey ;
     text-decoration: none;
 }
 
@@ -37,14 +38,20 @@ div, section {
 }
 
 h1 {
+    vertical-align: bottom;
     margin: 5px;
+    font-size: 3em;
+    text-align: center;
 }
 
 a {
     color:#000000;
     font-size: 4em;
     font-weight:bolder;
+    text-align: left;
+    vertical-align: bottom;
 }
+
 
 footer a {
     color:#000000;
@@ -84,16 +91,17 @@ head {
 }
 
 header {
-    text-align:center;
-    padding: 40px 0px;
+    text-align: center;
+    vertical-align: bottom;
+    padding: 10px 10px;
     height:600px;
     font-size:1.5em;
     font-weight:bolder;
     color:white;
     background-image: url(https://res.cloudinary.com/yungdorf/image/upload/v1615838227/club_ygfuxt.png);
-    text-decoration: none;
 
 );
+
     background-size:cover;
     background-position:center;
 }
@@ -113,8 +121,8 @@ summary {
     color:white;
 }
 
-@media screen and (max-width: 550px) {
-    nav {    font-size:1.5em;
+@media screen and (max-width: 150px) {
+    nav {    font-size:1.0em;
         font-weight:bolder;
         color:white;
         display:block;
@@ -152,26 +160,28 @@ a:link{
 style
      /* Style The Dropdown Button */
  .dropbtn {
-     background-color: #4CAF50;
-     color: white;
-     padding: 6px;
-     font-size: 6px;
+     background-color: #F5EFE6;
+     color: black;
+     padding: 0px;
+     font-size: 2px;
      border: black;
      cursor: pointer;
+     image:10px
  }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: static;
+    position: relative;
     display: inline-block;
+
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: static;
-    background-color: #f9f9f9;
-    min-width: 60px;
+    background-color: #F5EFE6;
+    min-width: 50px;
     box-shadow: 0px 8px 6px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -179,14 +189,14 @@ style
 /* Links inside the dropdown */
 .dropdown-content a {
     color: black;
-    font-size: 50px;
+    font-size: 20px;
     padding: 2px 2px;
     text-decoration: none;
     display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {background-color: #F5EFE6}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -195,6 +205,6 @@ style
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #F5EFE6;
 }
 
